hotfix : new route to get all orders from a restaurant + adding products to menu
